reduced size, fixing bugs

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,6 +56,11 @@
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
         </receiver>
+
+        <service
+            android:name=".service.RoutiniService"
+            android:foregroundServiceType="mediaPlayback" 
+            android:exported="false" />
     </application>
 
 </manifest>
