--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,9 +20,9 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android.icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/routini_icon"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/routini_icon_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Routini">
         <activity
@@ -44,6 +44,12 @@
             android:screenOrientation="portrait"
             android:theme="@style/Theme.Routini.Alarm"
             android:directBootAware="true" />
+
+        <activity
+            android:name=".widget.WidgetConfigActivity"
+            android:exported="false"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar"
+            android:taskAffinity="" />
 
         <receiver
             android:name=".receiver.AlarmReceiver"
@@ -78,6 +84,10 @@
                 <action android:name="android.intent.action.TIME_SET" />
                 <action android:name="android.intent.action.TIMEZONE_CHANGED" />
                 <action android:name="android.intent.action.DATE_CHANGED" />
+                <action android:name="com.dxtr.routini.widget.TASK_TOGGLE" />
+                <action android:name="com.dxtr.routini.widget.FILTER_CLICK" />
+                <action android:name="com.dxtr.routini.widget.MENU_ITEM_CLICK" />
+                <action android:name="com.dxtr.routini.widget.ADD_TASK" />
                 <action android:name="com.dxtr.routini.widget.FILTER_ALL" />
                 <action android:name="com.dxtr.routini.widget.FILTER_ROUTINE" />
                 <action android:name="com.dxtr.routini.widget.TOGGLE" />
@@ -96,6 +106,11 @@
             android:name=".widget.WidgetMenuService"
             android:permission="android.permission.BIND_REMOTEVIEWS"
             android:exported="false" />
+
+        <receiver
+            android:name=".receiver.ReminderReceiver"
+            android:exported="false" />
+
     </application>
 
 </manifest>
